@@ -1,5 +1,11 @@
 2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev-en 00852] Re: Enhancement: content type detection of files
+	* url.c (DefaultGuess): remove upppercases
+		(guessContentTypeFromTable): rewrite, strcasecmp
+
+2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03708] Re: Don't stop loading image when moving to next page.
 	* config.h.dist (lstat): define ifndef HAVE_LSTAT
 	* configure (config.h) ditto
@@ -6931,4 +6937,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.723 2003/01/29 17:10:17 ukai Exp $
+$Id: ChangeLog,v 1.724 2003/01/29 17:33:28 ukai Exp $
